--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ downloads/
 eggs/
 .eggs/
 lib/
+scripts/
 lib64/
 parts/
 sdist/
@@ -96,6 +97,7 @@ ipython_config.py
 
 # pyenv
 .python-version
+pyvenv.cfg
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
