--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ pywin32-ctypes==0.2.0
 QtAwesome==0.7.0
 QtPy==1.9.0
 six==1.14.0
-pynbs==0.3.0
+-e git+git://github.com/Bentroen/pynbs@master#egg=pynbs
