--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ QtAwesome = "^1.1.1"
 black = "^22.3.0"
 isort = "^5.10.1"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
