--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ PyQt5 = "^5.15.6"
 pynbs = "^1.1.0"
 QtAwesome = "^1.1.1"
 pydub = "^0.25.1"
+sounddevice = "^0.4.4"
+numpy = "^1.22.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
