--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ QtAwesome = "^1.1.1"
 pydub = "^0.25.1"
 sounddevice = "^0.4.4"
 numpy = "^1.22.4"
+fbs = {git = "https://github.com/Bentroen/fbs.git"}
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
