--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydub = "^0.25.1"
 sounddevice = "^0.4.4"
 numpy = "^1.22.4"
 fbs = {git = "https://github.com/Bentroen/fbs.git"}
+samplerate = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
