chore: enable static type checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
     "python.analysis.extraPaths": ["./src/main/python"],
+    "python.analysis.typeCheckingMode": "basic",
     "python.formatting.provider": "black",
     "python.languageServer": "Pylance",
     "python.linting.enabled": false,
