--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ isort = "^5.10.1"
 
 [tool.isort]
 profile = "black"
+known_first_party = ["nbs"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
