--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ samplerate = "^0.1.0"
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
 isort = "^5.10.1"
+pytest = "^7.1.2"
 
 [tool.isort]
 profile = "black"
