--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ samplerate = "^0.1.0"
 black = "^22.3.0"
 isort = "^5.10.1"
 pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 
 [tool.isort]
 profile = "black"
