--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ black = "^22.3.0"
 isort = "^5.10.1"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
+snakeviz = "^2.1.1"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
