--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 snakeviz = "^2.1.1"
 
+[tool.pyright]
+root = "src/main/python"
+typeCheckingMode = "basic"
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--cov=nbs"
