--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ numpy = "^1.22.4"
 fbs = {git = "https://github.com/Bentroen/fbs.git"}
 samplerate = "^0.1.0"
 python-openal = "^0.4.1"
+soundfile = "^0.12.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
